# Agronaut

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py  service.py
app/static/: styles.css
app/templates/: form.html
